# psscpp

./: .clang-format  CMakeLists.txt  README.md
include/psscpp/: algorithm.h  macros.h  type_traits.h
test/: CMakeLists.txt  algorithm_test.cpp  type_traits_test.cpp
